--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 The Neighbourhood Dog Walking</p>
+        <p>&copy; 2024 WALKR</p>
     </footer>
 </body>
 </html>
