--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <header>
         <nav>
             <ul class="nav-left">
-                <li><a href="index.html"><img src="logo.png" alt="Home" class="nav-logo"></a></li>
-                <li><a href="services.html">Services</a>
+                <li><a href="home.html"><img src="logo.png" alt="Home" class="nav-logo"></a></li>
+                <li>
+                    <a href="services.html">Services</a>
                     <ul>
-                        <li><a href="dog-walking.html">Dog Walking</a>
+                        <li>
+                            <a href="dog-walking.html">Dog Walking</a>
                             <ul>
                                 <li><a href="dog-walking-pricing.html">Pricing</a></li>
                             </ul>
                         </li>
-                        <li><a href="house-sitting.html">House Sitting</a>
+                        <li>
+                            <a href="house-sitting.html">House Sitting</a>
                             <ul>
                                 <li><a href="house-sitting-pricing.html">Pricing</a></li>
                             </ul>
@@ -30,8 +33,13 @@
                 <li><a href="about.html">About</a></li>
             </ul>
             <ul class="nav-right">
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Signup</a></li>
+                <li>
+                    <a href="#">Account</a>
+                    <ul>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="signup.html">Signup</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         <h1>Welcome to Walkr</h1>
