--- a/home/index.html
+++ b/home/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walkr - Dog Walking and House Sitting</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="notification-bar" id="notification-bar">
@@ -15,33 +15,33 @@
     <header>
         <nav>
             <ul class="nav-left">
-                <li><a href="home.html"><img src="logo.png" alt="Home" class="nav-logo"></a></li>
+                <li><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="/services/">Services</a>
                     <ul class="submenu">
                         <li>
-                            <a href="dog-walking.html">Dog Walking</a>
+                            <a href="/services/dog-walking/">Dog Walking</a>
                             <ul class="subsubmenu">
-                                <li><a href="dog-walking-pricing.html">Pricing</a></li>
+                                <li><a href="/services/dog-walking/pricing/">Pricing</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="house-sitting.html">House Sitting</a>
+                            <a href="/services/house-sitting/">House Sitting</a>
                             <ul class="subsubmenu">
-                                <li><a href="house-sitting-pricing.html">Pricing</a></li>
+                                <li><a href="/services/house-sitting/pricing/">Pricing</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/contact/">Contact</a></li>
+                <li><a href="/about/">About</a></li>
             </ul>
             <ul class="nav-right">
                 <li>
                     <a href="#">Account</a>
                     <ul class="submenu">
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="signup.html">Signup</a></li>
+                        <li><a href="/account/login/">Login</a></li>
+                        <li><a href="/account/signup/">Signup</a></li>
                     </ul>
                 </li>
             </ul>
