root update and page changes

--- a/home/index.html
+++ b/home/index.html
@@ -17,19 +17,13 @@
             <ul class="nav-left">
                 <li><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
                 <li>
-                    <a href="/services/">Services</a>
+                    <a href="#">Services</a>
                     <ul class="submenu">
                         <li>
                             <a href="/services/dog-walking/">Dog Walking</a>
-                            <ul class="subsubmenu">
-                                <li><a href="/services/dog-walking/pricing/">Pricing</a></li>
-                            </ul>
                         </li>
                         <li>
                             <a href="/services/house-sitting/">House Sitting</a>
-                            <ul class="subsubmenu">
-                                <li><a href="/services/house-sitting/pricing/">Pricing</a></li>
-                            </ul>
                         </li>
                     </ul>
                 </li>
