Navigation bar change

--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul class="nav-left">
-                <li><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
+                <li class="nav-home"><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
                 <li>
                     <a href="#">Services</a>
                     <ul class="submenu">
