--- a/home/index.html
+++ b/home/index.html
@@ -14,8 +14,8 @@
     </div>
     <header>
         <nav>
-            <ul class="nav-home">
-                <li><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
+            <ul class="nav-left">
+                <li class="nav-home"><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
             </ul>
             <ul class="nav-center">
                 <li>
