--- a/home/index.html
+++ b/home/index.html
@@ -14,6 +14,9 @@
     </div>
     <header>
         <nav>
+            <div class="gif-container">
+                <img src="/your-gif.gif" alt="Moving Gif">
+            </div>
             <ul class="nav-left">
                 <li class="nav-home"><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
             </ul>
@@ -60,11 +63,11 @@
     <script>
         function closeNotification() {
             const notificationBar = document.getElementById('notification-bar');
-            notificationBar.style.animation = 'fadeOut 0.5s forwards';
+            notificationBar.style.animation = 'fadeOut 1s forwards';
             setTimeout(() => {
                 notificationBar.style.display = 'none';
                 sessionStorage.setItem('notificationClosed', 'true');
-            }, 500);
+            }, 1000);
         }
 
         document.addEventListener('DOMContentLoaded', function () {
