--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="gif-container">
-                <img src="/your-gif.gif" alt="Moving Gif">
+                <img src="/nav-gif.gif" alt="Moving Gif">
             </div>
             <ul class="nav-left">
                 <li class="nav-home"><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
