--- a/home/index.html
+++ b/home/index.html
@@ -55,7 +55,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Walkr (1.2)</p>
+        <p>&copy; 2024 Walkr</p>
     </footer>
     <script>
         function closeNotification() {
