--- a/about/index.html
+++ b/about/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking Form</title>
+    <link rel="stylesheet" href="/styles.css"> <!-- Make sure to include the styles -->
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .booking-form-container {
+            flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
         }
         .booking-form {
             background-color: #fff;
@@ -47,16 +53,52 @@
     </style>
 </head>
 <body>
-    <div class="booking-form">
-        <h2>Book Now</h2>
-        <form id="booking-form">
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="Your Email" required>
-            <input type="text" id="phone" placeholder="Your Phone Number" required>
-            <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
-            <button type="submit">Submit</button>
-        </form>
+    <div class="notification-bar" id="notification-bar">
+        <span>Important notification message here!</span>
+        <button onclick="closeNotification()">X</button>
     </div>
+    <header>
+        <nav aria-label="Main Navigation">
+            <ul class="nav-left">
+                <li class="nav-home"><a href="/home/"><img src="/logo.png" alt="Home" class="nav-logo"></a></li>
+            </ul>
+            <ul class="nav-center">
+                <li>
+                    <a href="#" aria-haspopup="true" aria-expanded="false">Services</a>
+                    <ul class="submenu">
+                        <li><a href="/services/dog-walking/">Dog Walking</a></li>
+                        <li><a href="/services/house-sitting/">House Sitting</a></li>
+                    </ul>
+                </li>
+                <li><a href="/contact/">Contact</a></li>
+                <li><a href="/about/">About</a></li>
+            </ul>
+            <ul class="nav-right">
+                <li>
+                    <a href="#" aria-haspopup="true" aria-expanded="false">Account</a>
+                    <ul class="submenu">
+                        <li><a href="/account/login/">Login</a></li>
+                        <li><a href="/account/signup/">Signup</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div class="booking-form-container">
+        <div class="booking-form">
+            <h2>Book Now</h2>
+            <form id="booking-form">
+                <input type="text" id="name" placeholder="Your Name" required>
+                <input type="email" id="email" placeholder="Your Email" required>
+                <input type="text" id="phone" placeholder="Your Phone Number" required>
+                <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Walkr (1.3)</p>
+    </footer>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
         (function() {
@@ -76,6 +118,21 @@
             }, function(error) {
                 alert('Failed to send booking request. Please try again later.');
             });
+        });
+
+        function closeNotification() {
+            const notificationBar = document.getElementById('notification-bar');
+            notificationBar.style.animation = 'fadeOut 1s forwards';
+            setTimeout(() => {
+                notificationBar.style.display = 'none';
+                sessionStorage.setItem('notificationClosed', 'true');
+            }, 1000);
+        }
+
+        document.addEventListener('DOMContentLoaded', function () {
+            if (sessionStorage.getItem('notificationClosed') === 'true') {
+                document.getElementById('notification-bar').style.display = 'none';
+            }
         });
     </script>
 </body>
