--- a/account/login/index.html
+++ b/account/login/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walkr - Dog Walking and House Sitting</title>
+    <title>Walkr - Login</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
@@ -40,12 +40,30 @@
         </nav>
     </header>
     <main>
-        <!-- Content specific to each page goes here -->
+        <div class="login-form-container">
+            <div class="login-form">
+                <h2>Login</h2>
+                <form id="login-form">
+                    <input type="email" id="login-email" placeholder="Your Email" required>
+                    <input type="password" id="login-password" placeholder="Password" required>
+                    <button type="submit">Login</button>
+                </form>
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Walkr (1.3)</p>
     </footer>
     <script>
+        document.getElementById('login-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            // Placeholder for login logic
+            alert('Login not implemented.');
+            // After successful login, redirect to the account details page
+            window.location.href = '/account/details.html';
+        });
+
         function closeNotification() {
             const notificationBar = document.getElementById('notification-bar');
             notificationBar.style.animation = 'fadeOut 1s forwards';
