--- a/account/signup/index.html
+++ b/account/signup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walkr - Dog Walking and House Sitting</title>
+    <title>Walkr - Sign Up</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
@@ -40,12 +40,46 @@
         </nav>
     </header>
     <main>
-        <!-- Content specific to each page goes here -->
+        <div class="signup-form-container">
+            <div class="signup-form">
+                <h2>Sign Up</h2>
+                <form id="signup-form">
+                    <input type="email" id="email" placeholder="Your Email" required>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" id="confirm-password" placeholder="Confirm Password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <button onclick="signUpWithGoogle()">Sign Up with Google</button>
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Walkr (1.3)</p>
     </footer>
     <script>
+        function signUpWithGoogle() {
+            // Placeholder for Google sign-up logic
+            alert('Google Sign-Up not implemented.');
+        }
+
+        document.getElementById('signup-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirm-password').value;
+
+            if (password !== confirmPassword) {
+                alert('Passwords do not match.');
+                return;
+            }
+
+            // Placeholder for email/password sign-up logic
+            alert('Email Sign-Up not implemented.');
+            // After successful sign-up, redirect to the service selection page
+            window.location.href = '/account/service-selection.html';
+        });
+
         function closeNotification() {
             const notificationBar = document.getElementById('notification-bar');
             notificationBar.style.animation = 'fadeOut 1s forwards';
