home update (WIP)

--- a/home/index.html
+++ b/home/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="notification-bar" id="notification-bar">
-        <span>Important notification message here!</span>
+        <span>Notification Test</span>
         <button onclick="closeNotification()">X</button>
     </div>
     <header>
@@ -47,7 +47,7 @@
     <main>
         <section>
             <h2>About Us</h2>
-            <p>Welcome to The Neighbourhood Dog Walking service. We provide the best care for your pets.</p>
+            <p>Website under development, coming soon</p>
         </section>
         <section>
             <h2>Services</h2>
