--- a/index.html
+++ b/index.html
@@ -2,11 +2,243 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/home/">
-    <title>Redirecting...</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WALKR | Coming Soon!</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+.dog {
+    visibility: hidden;
+}
+
+@media only screen and (min-width: 1535px) and (min-height: 100px) {
+    .dog {
+        visibility: visible;
+    }
+}
+
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="/home/">link to the home page</a>.</p>
+    <div class="dog">
+        <div class="torso">
+            <div class="fur">
+                <div class="spot"></div>
+            </div>
+            <div class="neck">
+                <div class="fur"></div>
+                <div class="head">
+                    <div class="fur">
+                        <div class="snout"></div>
+                    </div>
+                    <div class="ears">
+                        <div class="ear">
+                            <div class="fur"></div>
+                        </div>
+                        <div class="ear">
+                            <div class="fur"></div>
+                        </div>
+                    </div>
+                    <div class="eye"></div>
+                </div>
+                <div class="collar"></div>
+            </div>
+            <div class="legs">
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="tail">
+                <div class="tail">
+                    <div class="tail">
+                        <div class="tail -end">
+                            <div class="tail ">
+                                <div class="tail">
+                                    <div class="tail">
+                                        <div class="tail"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="dog">
+        <div class="torso">
+            <div class="fur">
+                <div class="spot"></div>
+            </div>
+            <div class="neck">
+                <div class="fur"></div>
+                <div class="head">
+                    <div class="fur">
+                        <div class="snout"></div>
+                    </div>
+                    <div class="ears">
+                        <div class="ear">
+                            <div class="fur"></div>
+                        </div>
+                        <div class="ear">
+                            <div class="fur"></div>
+                        </div>
+                    </div>
+                    <div class="eye"></div>
+                </div>
+                <div class="collar"></div>
+            </div>
+            <div class="legs">
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="tail">
+                <div class="tail">
+                    <div class="tail">
+                        <div class="tail -end">
+                            <div class="tail ">
+                                <div class="tail">
+                                    <div class="tail">
+                                        <div class="tail"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="dog">
+        <div class="torso">
+            <div class="fur">
+                <div class="spot"></div>
+            </div>
+            <div class="neck">
+                <div class="fur"></div>
+                <div class="head">
+                    <div class="fur">
+                        <div class="snout"></div>
+                    </div>
+                    <div class="ears">
+                        <div class="ear">
+                            <div class="fur"></div>
+                        </div>
+                        <div class="ear">
+                            <div class="fur"></div>
+                        </div>
+                    </div>
+                    <div class="eye"></div>
+                </div>
+                <div class="collar"></div>
+            </div>
+            <div class="legs">
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+                <div class="leg">
+                    <div class="fur"></div>
+                    <div class="leg-inner">
+                        <div class="fur"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="tail">
+                <div class="tail">
+                    <div class="tail">
+                        <div class="tail -end">
+                            <div class="tail ">
+                                <div class="tail">
+                                    <div class="tail">
+                                        <div class="tail"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <main>
+        <h1>Welcome to WALKR!</h1>
+        <h2>Your Trusted Dog Walking Service</h2>
+        <p>Our website is fetching some exciting new features! While we're busy perfecting it, let us take care of all your dog walking needs. Feel free to reach out to us – we can't wait to meet your furry friends!</p>
+        <h3>Contact Us:</h3>
+        <div class="contact-info">
+            <a class="contact-item" href="https://wa.me/27607242055">
+                <i class="fa fa-whatsapp"></i>
+                060 724 2055
+            </a>
+            <a class="contact-item" href="tel:+27607242055">
+                <i class="fa fa-phone"></i>
+                060 724 2055
+            </a>
+            <a class="contact-item" href="mailto:ljmoodley03@gmail.com">
+                <i class="fa fa-envelope"></i>
+                ljmoodley03@gmail.com
+            </a>
+        </div>
+    </main>  
 </body>
 </html>
