Updated Contact Info

--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
         <div class="contact-info">
             <a class="contact-item" href="https://wa.me/27607242055">
                 <i class="fa fa-whatsapp"></i>
-                060 724 2055
+                060 550 6405
             </a>
             <a class="contact-item" href="tel:+27607242055">
                 <i class="fa fa-phone"></i>
-                060 724 2055
+                060 550 6405
             </a>
             <a class="contact-item" href="mailto:ljmoodley03@gmail.com">
                 <i class="fa fa-envelope"></i>
-                ljmoodley03@gmail.com
+                phanamatic@gmail.com
             </a>
         </div>
     </main>  
