--- a/index.html
+++ b/index.html
@@ -223,18 +223,18 @@
     <main>
         <h1>Welcome to WALKR!</h1>
         <h2>Your Trusted Dog Walking Service</h2>
-        <p>Our website is fetching some exciting new features! While we're busy perfecting it, let us take care of all your dog walking needs. Feel free to reach out to us – we can't wait to meet your furry friends!</p>
+        <p>Our website is fetching some <b style="color:black;">exciting new features!</b> While we're busy perfecting it, let us take care of all <b style="color:black;">your dog walking needs.</b> Feel free to <b style="color:black;">reach out to us</b> – we can't wait to meet your furry pal!</p>
         <h3>Contact Us:</h3>
         <div class="contact-info">
-            <a class="contact-item" href="https://wa.me/27607242055">
+            <a class="contact-item" href="https://wa.me/27605506405">
                 <i class="fa fa-whatsapp"></i>
                 060 550 6405
             </a>
-            <a class="contact-item" href="tel:+27607242055">
+            <a class="contact-item" href="tel:+27605506405">
                 <i class="fa fa-phone"></i>
                 060 550 6405
             </a>
-            <a class="contact-item" href="mailto:ljmoodley03@gmail.com">
+            <a class="contact-item" href="mailto:phanamatic@gmail.com">
                 <i class="fa fa-envelope"></i>
                 phanamatic@gmail.com
             </a>
