--- a/index.html
+++ b/index.html
@@ -2,21 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="./Images/WalkrDog.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WALKR | Coming Soon!</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-.dog {
-    visibility: hidden;
-}
+        .dog {
+            visibility: hidden;
+        }
 
-@media only screen and (min-width: 1535px) and (min-height: 100px) {
-    .dog {
-        visibility: visible;
-    }
-}
+        @media only screen and (min-width: 1535px) and (min-height: 100px) {
+            .dog {
+                visibility: visible;
+            }
+        }
 
+        .location {
+            margin-top: 20px;
+        }
+
+        .location h3 {
+            margin-bottom: 10px;
+        }
+
+        .location-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .location-item {
+            display: flex;
+            align-items: center;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        .location-item i {
+            font-size: 24px;
+            margin-right: 10px;
+            color: #056f15b6; /* red color for location pin */
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 <body>
@@ -224,21 +264,31 @@
         <h1>Welcome to WALKR!</h1>
         <h2>Your Trusted Dog Walking Service</h2>
         <p>Our website is fetching some <b style="color:black;">exciting new features!</b> While we're busy perfecting it, let us take care of all <b style="color:black;">your dog walking needs.</b> Feel free to <b style="color:black;">reach out to us</b> – we can't wait to meet your furry pal!</p>
+        <div class="location">
+            <h3>Our Locations:</h3>
+            <div class="location-container">
+                <div class="location-item">
+                    <i class="fa fa-map-marker"></i>
+                    <span>Edenvale</span>
+                </div>
+                <div class="location-item">
+                    <i class="fa fa-map-marker"></i>
+                    <span>Melrose </span>
+                </div>
+            </div>
+        </div>
         <h3>Contact Us:</h3>
         <div class="contact-info">
-            <a class="contact-item" href="https://wa.me/27605506405">
+            <a class="contact-item" href="https://wa.me/27767944736">
                 <i class="fa fa-whatsapp"></i>
-                060 550 6405
+                076 794 4736
             </a>
-            <a class="contact-item" href="tel:+27605506405">
-                <i class="fa fa-phone"></i>
-                060 550 6405
-            </a>
-            <a class="contact-item" href="mailto:phanamatic@gmail.com">
+            <a class="contact-item" href="https://mail.google.com/mail/?view=cm&fs=1&to=chris@walkr.co.za">
                 <i class="fa fa-envelope"></i>
-                phanamatic@gmail.com
+                chris@walkr.co.za
             </a>
         </div>
     </main>  
+</body>
 </body>
 </html>
