--- a/index.html
+++ b/index.html
@@ -2,45 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./Images/WalkrDog.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WALKR | Coming Soon!</title>
-    <link rel="stylesheet" type="text/css" href="../Styles/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>WALKR - Home</title>
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    <main class="main-content">
-        <img src="./Images/DogWalking.gif" alt="Dog Walking" class="dog-walking-gif">
-        <div class="information-box">
-            <h1>Welcome to WALKR!</h1>
-            <h2>Your Trusted Dog Walking Service</h2>
-            <p>My website is fetching some <b style="color:black;">exciting new features!</b> While I'm busy perfecting it, let me take care of all <b style="color:black;">your dog walking needs.</b> Feel free to <b style="color:black;">reach out to us</b> – I can't wait to meet your furry pal!</p>
-            <div class="location">
-                <h3>My Locations:</h3>
-                <div class="location-container">
-                    <div class="location-item">
-                        <i class="fa fa-map-marker"></i>
-                        <span>Edenvale</span>
-                    </div>
-                    <div class="location-item">
-                        <i class="fa fa-map-marker"></i>
-                        <span>Melrose</span>
-                    </div>
-                </div>
-            </div>
-            <h3>Contact Me:</h3>
-            <div class="contact-info">
-                <a class="contact-item" href="https://wa.me/27767944736">
-                    <i class="fa fa-whatsapp"></i>
-                    076 794 4736
-                </a>
-                <a class="contact-item" href="https://mail.google.com/mail/?view=cm&fs=1&to=chris@walkr.co.za">
-                    <i class="fa fa-envelope"></i>
-                    chris@walkr.co.za
-                </a>
-            </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Rates</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active"><img src="image1.jpg" alt="Image 1"></div>
+            <div class="carousel-item"><img src="image2.jpg" alt="Image 2"></div>
+            <div class="carousel-item"><img src="image3.jpg" alt="Image 3"></div>
         </div>
-    </main>  
+    </div>
+
+    <section>
+        <h2>Dog Walking</h2>
+        <h2>House Sitting</h2>
+        <h2>Current Clients</h2>
+    </section>
+
+    <div class="small-carousel">
+        <div class="small-carousel-inner">
+            <div class="small-carousel-item"><img src="small1.jpg" alt="Small Image 1"></div>
+            <div class="small-carousel-item"><img src="small2.jpg" alt="Small Image 2"></div>
+            <div class="small-carousel-item"><img src="small3.jpg" alt="Small Image 3"></div>
+            <!-- Add more small-carousel-item divs as needed -->
+        </div>
+    </div>
+
+    <script src="./Scripts/script.js"></script>
 </body>
 </body>
 </html>
